--- a/app/src/main/res/layout/business_item.xml
+++ b/app/src/main/res/layout/business_item.xml
@@ -6,10 +6,23 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:text="HELLO"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textColor="@color/black"
-        android:id="@+id/businessName"/>
+        android:id="@+id/businessName"
+        android:layout_toRightOf="@+id/imageView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="5dp" />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/noimage"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="5dp" />
 
 </RelativeLayout>
