*Remove Legacy Code *Add Navigation Drawer - Material Drawer *Add Custom Toolbar

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryDark">#808080</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+
     </style>
 
 </resources>
