Create Fragment Manager and switch between different fragments

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,4 +13,12 @@
         app:titleTextColor="@color/accent">
     </android.support.v7.widget.Toolbar>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/FrameLayout"
+        android:layout_below="@+id/toolbar">
+
+    </FrameLayout>
+
 </RelativeLayout>
