--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -1,15 +1,303 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.nobsratings.nobs.AboutUsFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="Our Impact"
-        android:textSize="30sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/RelativeView">
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/titleBox"
+        android:background="@color/md_grey_300">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/WhatWeDo"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:id="@+id/titleText"
+            android:textColor="@color/black"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/impactText"
+            android:layout_below="@id/titleText"
+            android:layout_margin="15dp"
+            android:textColor="@color/black"
+            android:gravity="center_horizontal"
+            android:text="@string/whatText"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/titleBox"
+        android:id="@+id/membersBox"
+        android:background="@color/md_grey_200">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/WhoWeAre"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:id="@+id/membersTitleText"
+            android:textColor="@color/black"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/membersText"
+            android:layout_margin="15dp"
+            android:textColor="@color/black"
+            android:text="@string/whoText"
+            android:layout_below="@id/membersTitleText"/>
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/membersBox2"
+        android:layout_below="@+id/membersBox"
+        android:background="@color/md_blue_grey_100">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Members"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:id="@+id/membersTitle"
+            android:textColor="@color/black"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"/>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/memberBox1"
+            android:layout_below="@+id/membersTitle">
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageContainer1">
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:id="@+id/memberPhoto1"
+                    android:padding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/imageContainer1">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/memberName1"
+                    android:textSize="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+                    android:text="Dan Lee - Lead Developer"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/memberName1"
+                    android:textSize="10dp"
+                    android:id="@+id/memberDescription1"
+                    android:paddingLeft="10dp"
+                    android:text="HE MADE THE APP!"/>
+            </RelativeLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/memberBox2"
+            android:layout_below="@+id/memberBox1">
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageContainer2">
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:id="@+id/memberPhoto2"
+                    android:padding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/imageContainer2">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/memberName2"
+                    android:textSize="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+                    android:text="Dan Lee - Lead Developer"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/memberName2"
+                    android:textSize="10dp"
+                    android:id="@+id/memberDescription2"
+                    android:paddingLeft="10dp"
+                    android:text="HE MADE THE APP!"/>
+            </RelativeLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/memberBox3"
+            android:layout_below="@+id/memberBox2">
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageContainer3">
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:id="@+id/memberPhoto3"
+                    android:padding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/imageContainer3">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/memberName3"
+                    android:textSize="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+                    android:text="Dan Lee - Lead Developer"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/memberName3"
+                    android:textSize="10dp"
+                    android:id="@+id/memberDescription3"
+                    android:paddingLeft="10dp"
+                    android:text="HE MADE THE APP!"/>
+            </RelativeLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/memberBox4"
+            android:layout_below="@+id/memberBox3">
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageContainer4">
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:id="@+id/memberPhoto4"
+                    android:padding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/imageContainer4">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/memberName4"
+                    android:textSize="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+                    android:text="Dan Lee - Lead Developer"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/memberName4"
+                    android:textSize="10dp"
+                    android:id="@+id/memberDescription4"
+                    android:paddingLeft="10dp"
+                    android:text="HE MADE THE APP!"/>
+            </RelativeLayout>
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/memberBox5"
+            android:layout_below="@+id/memberBox4">
+            <RelativeLayout
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:id="@+id/imageContainer5">
+                <ImageView
+                    android:layout_width="90dp"
+                    android:layout_height="90dp"
+                    android:id="@+id/memberPhoto5"
+                    android:padding="10dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@id/imageContainer5">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/memberName5"
+                    android:textSize="15dp"
+                    android:paddingLeft="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="10dp"
+                    android:textStyle="bold"
+                    android:paddingBottom="5dp"
+                    android:text="Dan Lee - Lead Developer"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/memberName5"
+                    android:textSize="10dp"
+                    android:id="@+id/memberDescription5"
+                    android:paddingLeft="10dp"
+                    android:text="HE MADE THE APP!"/>
+            </RelativeLayout>
+        </RelativeLayout>
+
+
+    </RelativeLayout>
+
+    </RelativeLayout>
+</ScrollView>
