--- a/app/src/main/res/layout/member_item.xml
+++ b/app/src/main/res/layout/member_item.xml
@@ -9,10 +9,10 @@
         android:id="@+id/imageContainer">
 
         <ImageView
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:id="@+id/memberPhoto"
-            android:padding="10dp"
+            android:padding="5dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"/>
 
@@ -27,9 +27,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/memberName"
-            android:textSize="15dp"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
+            android:textSize="12sp"
+            android:paddingTop="7dp"
             android:paddingRight="10dp"
             android:textStyle="bold"
             android:paddingBottom="5dp"
@@ -39,9 +38,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/memberName"
-            android:textSize="10dp"
+            android:textSize="10sp"
             android:id="@+id/memberDescription"
-            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
             android:text="HE MADE THE APP! "
 
             />
