--- a/app/src/main/res/layout/fragment_what_we_do.xml
+++ b/app/src/main/res/layout/fragment_what_we_do.xml
@@ -123,12 +123,13 @@
                 android:textAlignment="center"/>
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/environment_image"
+                android:layout_toLeftOf="@+id/community_image"
                 android:layout_margin="10dp"
                 android:layout_below="@id/our_rating_process_text"
-                android:layout_centerHorizontal="true"/>
+                android:src="@drawable/environment"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -136,37 +137,44 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Environment"
                 android:id="@+id/environment_text"
+                android:layout_alignLeft="@+id/environment_image"
+                android:layout_alignRight="@+id/environment_image"
                 android:layout_margin="10dp"
-                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
                 android:textColor="@color/white"
+                android:textSize="12dp"
                 android:layout_below="@id/environment_image"/>
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/community_image"
-                android:layout_below="@id/environment_text"
+                android:layout_below="@id/our_rating_process_text"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:src="@drawable/community"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Local Community Engagement"
+                android:text="Local Community \nEngagement"
+                android:textAlignment="center"
                 android:id="@+id/community_text"
                 android:layout_below="@id/community_image"
                 android:textColor="@color/white"
                 android:layout_centerHorizontal="true"
+                android:textSize="12dp"
                 android:layout_margin="10dp"/>
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/handshake_image"
-                android:layout_centerHorizontal="true"
+                android:layout_toRightOf="@+id/community_image"
                 android:layout_margin="10dp"
-                android:layout_below="@id/community_text"/>
+                android:layout_below="@id/our_rating_process_text"
+                android:src="@drawable/fair"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -175,17 +183,21 @@
                 android:text="Fair Trade"
                 android:id="@+id/handshake_text"
                 android:textColor="@color/white"
-                android:layout_centerHorizontal="true"
+                android:layout_alignLeft="@+id/handshake_image"
+                android:layout_alignRight="@+id/handshake_image"
                 android:layout_margin="10dp"
+                android:textSize="12dp"
+                android:textAlignment="center"
                 android:layout_below="@id/handshake_image"/>
 
             <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:id="@+id/labour_image"
-                android:layout_centerHorizontal="true"
+                android:layout_toLeftOf="@+id/center_holder"
                 android:layout_margin="10dp"
-                android:layout_below="@id/handshake_text"/>
+                android:layout_below="@id/community_text"
+                android:src="@drawable/labour"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -194,17 +206,28 @@
                 android:text="Labour Conditions"
                 android:id="@+id/labour_text"
                 android:textColor="@color/white"
-                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:textSize="12dp"
+                android:layout_alignLeft="@+id/labour_image"
+                android:layout_alignRight="@+id/labour_image"
                 android:layout_margin="10dp"
                 android:layout_below="@id/labour_image"/>
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:id="@+id/like_image"
+            <View
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:layout_below="@id/community_text"
                 android:layout_centerHorizontal="true"
+                android:id="@+id/center_holder"/>
+
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/like_image"
+                android:layout_toRightOf="@+id/center_holder"
                 android:layout_margin="10dp"
-                android:layout_below="@id/labour_text"/>
+                android:layout_below="@id/community_text"
+                android:src="@drawable/like"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -213,7 +236,10 @@
                 android:text="Pro-Consumer Behaviour"
                 android:id="@+id/like_text"
                 android:textColor="@color/white"
-                android:layout_centerHorizontal="true"
+                android:textAlignment="center"
+                android:textSize="12dp"
+                android:layout_alignLeft="@+id/like_image"
+                android:layout_alignRight="@+id/like_image"
                 android:layout_margin="10dp"
                 android:layout_below="@id/like_image"/>
 
@@ -246,7 +272,8 @@
                 android:id="@+id/image_one"
                 android:layout_centerHorizontal="true"
                 android:layout_below="@id/one_two_three"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:src="@drawable/collect"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -266,7 +293,8 @@
                 android:id="@+id/image_two"
                 android:layout_below="@id/text_one"
                 android:layout_centerHorizontal="true"
-                android:layout_margin="10dp"/>
+                android:layout_margin="10dp"
+                android:src="@drawable/verify"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -286,7 +314,8 @@
                 android:layout_below="@id/text_two"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="10dp"
-                android:id="@+id/image_three" />
+                android:id="@+id/image_three"
+                android:src="@drawable/calculate"/>
 
             <TextView
                 android:layout_width="wrap_content"
