--- a/app/src/main/res/layout/fragment_company.xml
+++ b/app/src/main/res/layout/fragment_company.xml
@@ -151,6 +151,7 @@
                     android:textColor="@color/white"
                     android:layout_centerHorizontal="true"
                     android:id="@+id/aboutText"
+                    android:paddingBottom="10dp"
                     android:textSize="20sp"/>
 
                 <TextView
